--- a/app/src/main/res/layout/activity_manage_staff.xml
+++ b/app/src/main/res/layout/activity_manage_staff.xml
@@ -17,4 +17,17 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <Button
+        android:id="@+id/btn_mn_createuser_mnstaff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Create user"
+        app:layout_constraintBottom_toTopOf="@+id/recycle_mn_list_staff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
