update product's functions

--- a/app/src/main/res/layout/mn_activity_product.xml
+++ b/app/src/main/res/layout/mn_activity_product.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.Manager.ProductActivity"
+    android:weightSum="1"
     android:orientation="vertical">
 
 
@@ -14,17 +15,20 @@
         android:text="Manage Product"
         android:textSize="30sp"
         android:textAlignment="center"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight=".1">
 
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text= "Name:"
             android:layout_marginTop="10dp"
+            android:text="Name:"
             android:textSize="16sp"
             tools:ignore="MissingConstraints" />
 
@@ -32,26 +36,27 @@
             android:id="@+id/txt_mn_ProductName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="16sp"
+            android:layout_marginLeft="20dp"
             android:hint="Tên"
-            android:layout_marginLeft="20dp"/>
+            android:textSize="16sp" />
     </LinearLayout>
-
 
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:layout_weight=".1"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:drawableLeft="@drawable/ic_baseline_free_breakfast_24"
+            android:paddingTop="15dp"
             android:text=" Category :"
             android:textSize="16sp"
-            android:paddingTop="15dp"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -63,46 +68,51 @@
 
         <Spinner
             android:id="@+id/sp_mn_Category"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:background="#B43F51B5"
-            android:layout_width="200dp"
-            android:layout_height="50dp" />
+            android:background="#B43F51B5" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight=".1">
 
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text= "Amount:"
-            android:textSize="16sp"
             android:layout_marginTop="10dp"
+            android:text="Amount:"
+            android:textSize="16sp"
             tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/txt_mn_ProductAmount"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="16sp"
+            android:layout_marginLeft="20dp"
             android:hint="Số lượng"
-            android:layout_marginLeft="20dp"/>
+            android:textSize="16sp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight=".1">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text= "Price:"
             android:layout_marginTop="10dp"
+            android:text="Price:"
             android:textSize="16sp"
             tools:ignore="MissingConstraints" />
 
@@ -110,29 +120,63 @@
             android:id="@+id/txt_mn_Price"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="16sp"
+            android:layout_marginLeft="20dp"
             android:hint="Giá"
-            android:layout_marginLeft="20dp"/>
+            android:textSize="16sp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight=".1"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".3"
+            android:gravity="center_vertical"
+            android:text="Image" />
+
+        <ImageView
+            android:id="@+id/imageView_mn_product"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".7"
+            app:srcCompat="@drawable/img_edit" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp">
 
         <Button
             android:id="@+id/btn_mn_ProductAddEdit"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Add/Edit"
-            android:layout_marginLeft="30dp"/>
-
+            android:layout_marginRight="10dp"
+            android:text="Add/Edit" />
 
 
         <Button
             android:id="@+id/btn_mn_ProductDelete"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Delete"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginRight="10dp"  
+            android:text="Delete" />
+
+        <Button
+            android:id="@+id/btn_mn_find_product"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Find" />
     </LinearLayout>
 </LinearLayout>
