--- a/app/src/main/res/layout/w_activity_waiter.xml
+++ b/app/src/main/res/layout/w_activity_waiter.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
@@ -10,19 +11,29 @@
     tools:context=".activities.Waiter.WaiterActivity"
     tools:openDrawer="start">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Waitering"
-    android:gravity="center"
-    android:textSize="25sp"/>
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationView"
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#fff"
-        app:headerLayout="@layout/hearder_menu"
-        app:menu="@menu/main_navigation"
-        app:itemTextColor="@color/black"/>
-</androidx.drawerlayout.widget.DrawerLayout>
+        android:layout_height="match_parent">
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navigationView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#fff"
+            app:headerLayout="@layout/hearder_menu"
+            app:itemTextColor="@color/black"
+            app:menu="@menu/main_navigation" />
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+
+
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Go"
+        android:id="@+id/w_btn_confirm_order"
+        android:layout_gravity="center"/>
+</FrameLayout>
