--- a/app/src/main/res/layout/mn_activity_manage_product.xml
+++ b/app/src/main/res/layout/mn_activity_manage_product.xml
@@ -27,4 +27,12 @@
         android:layout_marginLeft="60dp">
     </Button>
 
+    <Button
+        android:id="@+id/btn_mn_productType_mn_product"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="100dp"
+        android:text="Product Type"
+        android:textSize="25sp" />
 </LinearLayout>
