--- a/app/src/main/res/layout/w_activity_waiter.xml
+++ b/app/src/main/res/layout/w_activity_waiter.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Use DrawerLayout as root container for activity -->
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    android:fitsSystemWindows="true">
 
-    tools:context=".activities.Waiter.WaiterActivity"
-    tools:openDrawer="start">
-
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:name="com.microwaveteam.quarantinecoffee.activities.Waiter.MainWaiterFragment">
 
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigationView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="#fff"
-            app:headerLayout="@layout/hearder_menu"
-            app:itemTextColor="@color/black"
-            app:menu="@menu/main_navigation" />
-    </androidx.drawerlayout.widget.DrawerLayout>
+    </fragment>
 
-
-
+    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#fff"
+        app:headerLayout="@layout/hearder_menu"
+        app:itemTextColor="@color/black"
+        app:menu="@menu/main_navigation" />
 
     <Button
         android:layout_width="100dp"
@@ -36,4 +32,5 @@
         android:text="Go"
         android:id="@+id/w_btn_confirm_order"
         android:layout_gravity="center"/>
-</FrameLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
