--- a/app/src/main/res/layout/b_activity_bartender.xml
+++ b/app/src/main/res/layout/b_activity_bartender.xml
@@ -14,4 +14,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="50sp"/>
+
+    <Button
+        android:id="@+id/btnBartenderGo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="164dp"
+        tools:layout_editor_absoluteY="446dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
