sap xong bartender r

--- a/app/src/main/res/layout/activity_show_list_queue_order.xml
+++ b/app/src/main/res/layout/activity_show_list_queue_order.xml
@@ -18,21 +18,8 @@
         android:background="#fff">
 
 
-        <ImageView
-            android:id="@+id/img_order_showProduct"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:src="@drawable/ic_logo_cafe"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="4dp" />
-
         <TextView
-            android:id="@+id/txt_order_ProductName"
+            android:id="@+id/txt_order_table"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -40,14 +27,30 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/img_order_showProduct"
+            android:includeFontPadding="false"
+            android:text="Bàn số: "
+            android:textColor="#000"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/txt_order_ProductName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:includeFontPadding="false"
             android:text="Cafe Da"
             android:textColor="#000"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img_order_showProduct"
+            app:layout_constraintStart_toEndOf="@+id/txt_order_table"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.512"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -55,10 +58,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="36dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/img_order_showProduct"
+            android:layout_toRightOf="@+id/txt_order_table"
             android:includeFontPadding="false"
             android:text="0"
             android:textColor="#000"
@@ -74,13 +77,13 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_marginStart="268dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="3dp"
             android:background="@drawable/ic_checkbox"
             app:backgroundTint="#a1c9f1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_order_amount"
             app:layout_constraintTop_toTopOf="parent" />
 
 
