--- a/app/src/main/res/layout/w_activity_waiter.xml
+++ b/app/src/main/res/layout/w_activity_waiter.xml
@@ -9,6 +9,7 @@
 
     <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
     <fragment
+        android:id="@+id/fragment_w_products"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="com.microwaveteam.quarantinecoffee.activities.Waiter.MainWaiterFragment">
