--- a/app/src/main/res/layout/w_fragment_main_waiter.xml
+++ b/app/src/main/res/layout/w_fragment_main_waiter.xml
@@ -7,13 +7,45 @@
     tools:context=".activities.Waiter.MainWaiterFragment">
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinner_w_list_table"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:minHeight="32dp"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_w_table_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:layout_marginLeft="10dp"
+            android:text="Table detail" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".15"
+            android:text="" />
+
+        <Button
+            android:id="@+id/btn_w_table_confirm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".333"
+            android:layout_marginRight="10dp"
+            android:text="Confirm" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_w_products"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
