--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,21 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity"
+
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/login_logo"
+            android:layout_marginTop="50dp"
+            android:adjustViewBounds="true"/>
+
+    </LinearLayout>
 
     <EditText
         android:id="@+id/txt_mn_username_update"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:drawableLeft="@drawable/ic_baseline_account_box_24"
         android:hint="UserName"
         android:textSize="25sp"
         android:layout_gravity="center"
-        android:layout_marginTop="250dp"/>
+        android:layout_marginTop="30dp"/>
 
     <EditText
         android:id="@+id/txtPass"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:hint="Password"
         android:inputType="textPassword"
         android:textSize="25sp"
@@ -31,8 +47,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Button"
+        android:text="Login"
         android:layout_marginTop="20dp"/>
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textOn="On"
+        android:textOff="Off"
+        app:showText="true"
+        android:text="Auto join"
+        android:layout_marginLeft="10dp"/>
 
 
 </LinearLayout>
