--- a/app/src/main/res/layout/w_fragment_main_waiter.xml
+++ b/app/src/main/res/layout/w_fragment_main_waiter.xml
@@ -20,7 +20,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btn_w_make_bill_fragment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
