--- a/app/src/main/res/layout/mn_activity_promotion.xml
+++ b/app/src/main/res/layout/mn_activity_promotion.xml
@@ -57,6 +57,47 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:weightSum="10">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="Date Promotion: "
+            android:textSize="16sp"
+            tools:ignore="MissingConstraints"
+            android:layout_weight="3"/>
+
+        <EditText
+            android:id="@+id/txt_mn_startPromotion"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3.25"
+            android:hint="Start Promotion"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="~"
+            android:textSize="20sp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="0.5"/>
+
+        <EditText
+            android:id="@+id/txt_mn_endPromotion"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3.25"
+            android:hint="End Promotion"
+            android:layout_marginLeft="5dp"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
