--- a/app/src/main/res/layout/w_fragment_main_waiter.xml
+++ b/app/src/main/res/layout/w_fragment_main_waiter.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight=".333"
-            android:text="Make bill" />
+            android:text="Bill" />
 
         <Button
             android:id="@+id/btn_w_table_detail"
