--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -6,7 +6,7 @@
         <item
             android:id="@+id/help_navItem_profile"
             android:icon="@drawable/avt"
-            android:title="MY PROFILE"/>
+            android:title="Bill history"/>
         <item
             android:id="@+id/help_navItem_timekeeper"
             android:icon="@drawable/ic_action_timekeeping"
