--- a/app/src/main/res/layout/mn_activity_manage_product.xml
+++ b/app/src/main/res/layout/mn_activity_manage_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Product"
         android:textSize="25sp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
         android:layout_marginLeft="60dp">
     </Button>
 
@@ -34,5 +34,14 @@
         android:layout_marginLeft="60dp"
         android:layout_marginTop="100dp"
         android:text="Product Type"
+        android:textSize="25sp" />
+
+    <Button
+        android:id="@+id/btn_mn_table_mn_product"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="100dp"
+        android:text="Table"
         android:textSize="25sp" />
 </LinearLayout>
