--- a/app/src/main/res/layout/activity_show_list_queue_order.xml
+++ b/app/src/main/res/layout/activity_show_list_queue_order.xml
@@ -23,17 +23,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:includeFontPadding="false"
             android:text="Bàn số: "
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp" />
 
         <TextView
             android:id="@+id/txt_order_ProductName"
@@ -46,7 +45,7 @@
             android:includeFontPadding="false"
             android:text="Cafe Da"
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_order_table"
             app:layout_constraintTop_toTopOf="parent"
@@ -58,18 +57,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="28dp"
             android:layout_marginBottom="5dp"
             android:layout_toRightOf="@+id/txt_order_table"
             android:includeFontPadding="false"
             android:text="0"
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txt_order_ProductName"
+            app:layout_constraintEnd_toStartOf="@+id/btn_order_finish"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.512"
+            app:layout_constraintVertical_bias="0.522"
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -83,7 +82,7 @@
             android:background="@drawable/ic_checkbox"
             app:backgroundTint="#a1c9f1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txt_order_amount"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
