--- a/app/src/main/res/layout/b_activity_bartender.xml
+++ b/app/src/main/res/layout/b_activity_bartender.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Bartender.BartenderActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bartender"
+    tools:context=".activities.Bartender.BartenderActivity"
+    android:padding="10dp"
+    android:background="#CCE1F3"
+    android:id="@+id/bar_drawer_layout">
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/bar_navigationView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#fff"
+        app:headerLayout="@layout/hearder_menu"
+        app:itemTextColor="@color/black"
+        app:menu="@menu/main_navigation" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_order_queue"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        android:layout_marginTop="60dp"
+        android:background="#CCE1F3"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="50sp"/>
+        tools:layout_editor_absoluteX="-6dp">
 
-    <Button
-        android:id="@+id/btnBartenderGo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="164dp"
-        tools:layout_editor_absoluteY="446dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.recyclerview.widget.RecyclerView>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
