--- a/app/src/main/res/layout/timekeeper_details.xml
+++ b/app/src/main/res/layout/timekeeper_details.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/border">
 
     <TextView
         android:id="@+id/time_show_name"
