--- a/app/src/main/res/layout/mn_show_item_product.xml
+++ b/app/src/main/res/layout/mn_show_item_product.xml
@@ -4,68 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
     android:clickable="true"
     android:focusable="true"
     android:background="?android:attr/selectableItemBackground"
     android:weightSum="1">
 
     <ImageView
-        android:id="@+id/imageview_w_image_recycler_view"
+        android:id="@+id/imageview_mn_products"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
+        android:layout_weight="0.2"
         tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight=".5"
+        android:layout_weight=".4"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txt_w_product_name_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="TextView" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/txt_w_price_recycler_view"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingLeft="10dp"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/txt_w_sale_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/txt_w_amount_recycler_view"
+            android:id="@+id/txt_mn_product_name_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/txt_w_promotion_recycler_view"
+            android:id="@+id/txt_mn_price_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/txt_mn_amount_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/txt_mn_promotion_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/txt_w_recycler_producttype"
+        android:id="@+id/txt_mn_recycler_productType"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".2"
         android:text="TextView" />
+
+    <ImageButton
+        android:id="@+id/imageButton_mn_addProduct"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".2"
+        android:background="@drawable/img_add"/>
+
 </LinearLayout>
