--- a/app/src/main/res/layout/mn_activity_manager.xml
+++ b/app/src/main/res/layout/mn_activity_manager.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".333"
+            android:layout_weight=".25"
             android:orientation="vertical">
             <Button
                 android:id="@+id/btnManageProduct"
@@ -39,7 +39,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".333"
+            android:layout_weight=".25"
             android:orientation="vertical">
             <Button
                 android:id="@+id/btnManageEmployee"
@@ -53,7 +53,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".333"
+            android:layout_weight=".25"
             android:orientation="vertical">
             <Button
                 android:id="@+id/btnStatistical"
@@ -62,6 +62,21 @@
                 android:text="Statistical"
                 android:textSize="25sp"
                 android:layout_gravity="center_horizontal"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".25"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnEmployeeTimeKeeper"
+                android:layout_width="310dp"
+                android:layout_height="wrap_content"
+                android:text="Employee's timekeeper"
+                android:textSize="25sp"
+                android:layout_gravity="center_horizontal" />
         </LinearLayout>
     </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
