--- a/app/src/main/res/layout/w_recycler_product_items.xml
+++ b/app/src/main/res/layout/w_recycler_product_items.xml
@@ -33,7 +33,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingLeft="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
